--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -489,81 +489,185 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkHBox" id="hbox1">
+          <widget class="GtkHBox" id="hboxStatus">
             <property name="visible">True</property>
-            <property name="spacing">5</property>
+            <property name="spacing">10</property>
             <child>
-              <widget class="GtkStatusbar" id="status1">
+              <widget class="GtkLabel" id="labelStatus">
                 <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkStatusbar" id="status2">
-                <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
+                <property name="xalign">0</property>
+                <property name="single_line_mode">True</property>
+                <property name="ellipsize">3</property>
               </widget>
               <packing>
-                <property name="expand">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkHBox" id="hboxHubs">
+                <property name="visible">True</property>
+                <property name="spacing">5</property>
+                <property name="tooltip" translatable="yes">Hubs (normal / registered / op)</property>
+                <child>
+                  <widget class="GtkImage" id="imageHubs">
+                    <property name="visible">True</property>
+                    <property name="stock">freedcpp-public-hubs</property>
+                    <property name="icon_size">1</property>
+                  </widget>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="labelHubs">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="single_line_mode">True</property>
+                    <property name="label" translatable="no">0/0/0</property>
+                  </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </widget>
+              <packing>
                 <property name="position">1</property>
+                <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkStatusbar" id="status3">
+              <widget class="GtkVSeparator" id="separatorDownload">
                 <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
               </widget>
               <packing>
-                <property name="expand">False</property>
                 <property name="position">2</property>
+                <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkStatusbar" id="status4">
+              <widget class="GtkHBox" id="hboxDownloadSpeed">
                 <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
+                <property name="spacing">5</property>
+                <property name="tooltip" translatable="yes">Download speed</property>
+                <child>
+                  <widget class="GtkImage" id="imageDownloadSpeed">
+                    <property name="visible">True</property>
+                    <property name="stock">freedcpp-download</property>
+                    <property name="icon_size">1</property>
+                  </widget>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="labelDownloadSpeed">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="single_line_mode">True</property>
+                    <property name="label" translatable="no">0 B/s</property>
+                  </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
-                <property name="expand">False</property>
                 <property name="position">3</property>
+                <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkStatusbar" id="status5">
+              <widget class="GtkVSeparator" id="separatorDownload">
                 <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
               </widget>
               <packing>
-                <property name="expand">False</property>
                 <property name="position">4</property>
+                <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkStatusbar" id="status6">
+              <widget class="GtkLabel" id="labelDownloaded">
                 <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
+                <property name="xalign">0</property>
+                <property name="tooltip" translatable="yes">Total received</property>
+                <property name="single_line_mode">True</property>
+                <property name="label" translatable="no">0 B</property>
               </widget>
               <packing>
-                <property name="expand">False</property>
                 <property name="position">5</property>
+                <property name="expand">False</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkStatusbar" id="status7">
+              <widget class="GtkVSeparator" id="separatorDownload">
                 <property name="visible">True</property>
-                <property name="has_resize_grip">False</property>
               </widget>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
                 <property name="position">6</property>
+                <property name="expand">False</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkHBox" id="hboxUploadSpeed">
+                <property name="visible">True</property>
+                <property name="spacing">5</property>
+                <property name="tooltip" translatable="yes">Upload speed</property>
+                <child>
+                  <widget class="GtkImage" id="imageUploadSpeed">
+                    <property name="visible">True</property>
+                    <property name="stock">freedcpp-upload</property>
+                    <property name="icon_size">1</property>
+                  </widget>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="labelUploadSpeed">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="single_line_mode">True</property>
+                    <property name="label" translatable="no">0 B/s</property>
+                  </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </widget>
+              <packing>
+                <property name="position">7</property>
+                <property name="expand">False</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkVSeparator" id="separatorUpload">
+                <property name="visible">True</property>
+              </widget>
+              <packing>
+                <property name="position">8</property>
+                <property name="expand">False</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="labelUploaded">
+                <property name="visible">True</property>
+                <property name="xalign">0</property>
+                <property name="tooltip" translatable="yes">Total sent</property>
+                <property name="single_line_mode">True</property>
+                <property name="label" translatable="no">0 B</property>
+              </widget>
+              <packing>
+                <property name="position">9</property>
+                <property name="expand">False</property>
+                <property name="padding">5</property>
               </packing>
             </child>
           </widget>
           <packing>
-            <property name="expand">False</property>
             <property name="fill">False</property>
+            <property name="expand">False</property>
             <property name="position">3</property>
+            <property name="padding">2</property>
           </packing>
         </child>
       </widget>
