Исправил иконку выхода в статус-меню.

--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -1012,9 +1012,15 @@ Contributors:
     <child>
       <widget class="GtkImageMenuItem" id="statusIconQuitItem">
         <property name="visible">True</property>
-        <property name="label">gtk-quit</property>
+        <property name="label" translatable="yes">_Exit</property>
         <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
+        <child internal-child="image">
+          <widget class="GtkImage" id="exitImage">
+            <property name="visible">True</property>
+            <property name="stock">freedcpp-quit</property>
+            <property name="icon_size">1</property>
+          </widget>
+        </child>
       </widget>
     </child>
   </widget>
